--- a/start.html
+++ b/start.html
@@ -7,6 +7,8 @@
     <title>my-second-repo</title>
 </head>
 <body>
+   <h1>hi i am mimi </h1>
+   <h2>this is not my index.html</h2> 
     
 </body>
 </html>
