--- a/start.html
+++ b/start.html
@@ -10,6 +10,7 @@
    <h1>hi i am mimi </h1>
    <h2>this is not my index.html</h2> 
    <img src="ami.jpg" alt="">
+   <img src="doll.webp" alt="">
     
 </body>
 </html>
